# Kyo.github.io

./: .gitignore  404.html  ANALYTICS_GUIDE.md  BLOG_ANALYSIS_REPORT.md  CNAME  Gemfile  Makefile  OPERATIONAL_GUIDELINES.md  PROJECT_COMPLETION_REPORT.md  PROJECT_COMPLETION_REPORT_V2.md  PROJECT_COMPLETION_REPORT_V4.md  PROJECT_COMPLETION_REPORT_V5.md  SOW.md  _config.yml  about.md  b_about.md  case-studies.md  g_datascience.md  g_relatedbookreview.md  g_review.md  h_visualization.md  i_markerting.md  index.html  j_investment.md  k_travel.md  marketing-science-README.md  newsletter.md  press-kit.md  pyproject.toml  robots.txt  test.html  work-with-me.md
.bundle/: config
_includes/: Aboutme.html  Blogroll.html  Copyright_Notice.html  analytics.html  callout.html  cta.html  d3.html  decision-bridge.html  fb-like.html  figure.html  footer.html  gate-badge.html  goole-form.html  head.html  header.html  img-cloudinary.html  instagram.html  jsonld-article.html  key-takeaways.html  method-box.html  myth-reality.html  og-twitter.html  page_pagination.html  pinterest.html  post_pagination.html  qa.html  related-by-tags.html  sidebar.html  toc.html  trello.html
_includes_backup/: img-cloudinary.html  tldr.html
_layouts/: default.html  page.html  post.html
_posts/: 2021-05-08-sales-forecasting.md  2021-05-09-Marketing-Plan-for-John-Lewis.md  2021-05-09-review-of-Pendragon-PLC.md  2021-05-10-financial-projection-of-a-meal-kit-start-up.md  2021-05-10-service-design-analysis-of-monzo.md  2021-05-25-cloud-computing-could-change-cell-phone-business.md  2021-05-26-vc-finance.md  (+48 more)
(+101 files in other folders)
