[tool.poetry]
name = "kyo-github-pages"
version = "0.1.0"
description = "Kyo's GitHub Pages site with QA tools"
authors = ["Kyoichiro Harada <kyo@example.com>"]

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12"
requests = "^2.32"
lxml = "^5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
